--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -1,57 +1,34 @@
 // Index 1 Concept
-.index-subscribe {
-  section:last-of-type {
-    margin: 5em auto;
-  }
-}
-#concept {
-  margin: 5em auto;
-  background: $secondary-color-dark;
-  box-shadow: 0px 0px 84px 0px rgba(0, 0, 0, 0.15);
-  .block-logo {
+#homepage-landing {
+  .left-column {
     display: none;
   }
-  .what-is-it {
-    padding-top: 9em;
-    color: $tertiary-color-light;
+  .right-column {
+    //padding-top: 9em;
+    //color: $tertiary-color-light;
+    padding: 0;
     font-family: $montserrat-regular;
-    height: 585px;
-    border-image-source: url("../img/border-background-what-is-it.png");
-    border-image-slice: 40;
-    border-image-width: 36px;
-    border-image-outset: 0;
-    border-image-repeat: stretch;
     p {
       line-height: 2;
     }
   }
-  video {
-    width: 100%;
-    height: auto;
-  }
 }
 
 @media (min-width: $screen-sm-min) {
-  #concept {
-    .what-is-it {
-      height: 400px;
-      padding-top: 5em;
+  #homepage-landing {
+    .right-column {
+      //padding-top: 5em;
     }
   }
 }
 
 @media (min-width: $screen-md-min) {
-  #concept {
-    .block-logo {
+  #homepage-landing {
+    .left-column {
       display: block;
-      background-image: url("../img/logo-lg.png"), url("../img/background-logo-index.jpg");
-      background-position: center center, center center;
-      background-repeat: no-repeat;
-      height: 585px;
     }
-    .what-is-it {
-      height: 585px;
-      padding-top: 9em;
+    .right-column {
+      //padding-top: 9em;
     }
   }
 }
