--- a/www/src/sass/_fonts.scss
+++ b/www/src/sass/_fonts.scss
@@ -21,3 +21,9 @@
     src: url('../fonts/opensans-bold-webfont.woff') format('woff'),
          url('../fonts/opensans-bold-webfont.ttf') format('truetype');
 }
+
+/*@font-face {
+    font-family: 'Gotham Medium';
+    src: url('../fonts/gotham-condensed-medium-webfont.woff') format('woff'),
+         url('../fonts/gotham-condensed-medium-webfont.ttf') format('truetype');
+}*/
