--- a/www/src/sass/_variables.scss
+++ b/www/src/sass/_variables.scss
@@ -10,9 +10,10 @@ $secondary-color-dark: #f5f5f5;
 $tertiary-color-light: #999999;
 $tertiary-color-dark: #777777;
 $quaternary-color: #2c2c2c;
+$quinary-color: #1c1c1c;
 
-$bg-header-color: $primary-color;
-$bg-content-color: $secondary-color-light;
+$bg-header-color: $quinary-color;
+$bg-content-color: $quinary-color;
 //$bg-footer-color: $tertiary-color;
 
 // Fonts Family
@@ -22,17 +23,19 @@ $montserrat-regular: 'Montserrat Regular', $font-default;
 $montserrat-bold: 'Montserrat Bold', $font-default;
 $opensans-regular: 'Open Sans Regular', $font-default;
 $opensans-bold: 'Open Sans Bold', $font-default;
+//$gotham-medium: 'Gotham Medium', $font-default;
 
 $fonts-content: $montserrat-regular;
 
 // Fonts Size
 $font-size: 14px;
 
-$font-size-h1: 7.429rem; // 104px
+//$font-size-h1: 7.429rem; // 104px
+$font-size-h1: 3.143rem; // 44px
 $font-size-h2: 1.571rem; // 22px
 $font-size-h3: 1.429rem; // 20px
 
-$font-size-btn: 1.571rem; // 22px
+$font-size-btn: 1.429rem; // 20px
 $font-size-menu: 1.571rem; // 22px
 
 // Background Sprite
