Ajustement header + footer. Bonne nuit

--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -324,13 +324,6 @@ p {
     margin-top: 23px;
   }
 
-  .navbar .navbar-nav.navbar-center {
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-
   .navbar .navbar-nav.navbar-center li {
     position: relative;
   }
@@ -354,14 +347,14 @@ p {
 
   .navbar .navbar-nav.navbar-right li:last-of-type a {
     position: relative;
-    padding-right: 60px;
+    padding-right: 75px;
     padding-left: 35px;
   }
 
   .navbar .navbar-nav.navbar-right li:last-of-type a:after {
     position: absolute;
     top: 5px;
-    right: 0;
+    right: 15px;
     display: block;
     width: 41px;
     height: 41px;
@@ -370,13 +363,17 @@ p {
   }
 }
 
-#homepage-landing .left-column {
-  display: none;
+@media (min-width: 992px) {
+  .navbar .navbar-nav.navbar-center {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
 }
 
 #homepage-landing .right-column {
   font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
-  padding: 0;
 }
 
 #homepage-landing .right-column p {
@@ -384,8 +381,8 @@ p {
 }
 
 @media (min-width: 992px) {
-  #homepage-landing .left-column {
-    display: block;
+  #homepage-landing .right-column {
+    padding: 0;
   }
 }
 
@@ -564,7 +561,18 @@ footer a:focus {
 }
 
 .contact-us a {
+  display: inline-block;
+  width: 38px;
+  height: 38px;
   margin-left: 10px;
+}
+
+.contact-us a.ico-rs-facebook {
+  background: url('../img/spritesheet.png') no-repeat -70px -5px;
+}
+
+.contact-us a.ico-rs-twitter {
+  background: url('../img/spritesheet.png') no-repeat -118px -5px;
 }
 
 @media (max-width: 767px) {
