--- a/www/src/sass/_footer.scss
+++ b/www/src/sass/_footer.scss
@@ -17,6 +17,15 @@ footer {
   text-align: right;
   a {
     margin-left: 10px;
+    width: 38px;
+    height: 38px;
+    display: inline-block;
+    &.ico-rs-facebook {
+      background: url('../img/spritesheet.png') no-repeat -70px -5px;
+    }
+    &.ico-rs-twitter {
+      background: url('../img/spritesheet.png') no-repeat -118px -5px;
+    }
   }
 }
 
