--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -21,6 +21,35 @@
     src: url('../fonts/opensans-bold-webfont.woff') format('woff'), url('../fonts/opensans-bold-webfont.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'icomoon';
+
+    src: url('../fonts/icomoon.ttf?mu5ike') format('truetype'), url('../fonts/icomoon.woff?mu5ike') format('woff');
+}
+
+[class^='icon-'],
+[class*=' icon-'] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  font-weight: normal;
+  font-style: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-transform: none;
+  speak: none;
+    /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-twitter:before {
+  content: '\e900';
+}
+
+.icon-facebook:before {
+  content: '\e901';
+}
+
 /*@font-face {
     font-family: 'Gotham Medium';
     src: url('../fonts/gotham-condensed-medium-webfont.woff') format('woff'),
@@ -30,7 +59,7 @@ html,
 body {
   height: 100%;
   color: #f5f5f5;
-  background: #1c1c1c;
+  background: #1c1c1c url('../img/background.jpg') center top;
 }
 
 body {
@@ -259,7 +288,7 @@ p {
 }
 
 .navbar {
-  background: #1c1c1c;
+  background: none;
 }
 
 .navbar .navbar-brand {
@@ -561,18 +590,9 @@ footer a:focus {
 }
 
 .contact-us a {
+  font-size: 3.571rem;
   display: inline-block;
-  width: 38px;
-  height: 38px;
   margin-left: 10px;
-}
-
-.contact-us a.ico-rs-facebook {
-  background: url('../img/spritesheet.png') no-repeat -70px -5px;
-}
-
-.contact-us a.ico-rs-twitter {
-  background: url('../img/spritesheet.png') no-repeat -118px -5px;
 }
 
 @media (max-width: 767px) {
