--- a/www/src/sass/_fonts.scss
+++ b/www/src/sass/_fonts.scss
@@ -22,6 +22,34 @@
          url('../fonts/opensans-bold-webfont.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.ttf?mu5ike') format('truetype'),
+         url('../fonts/icomoon.woff?mu5ike') format('woff');
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-twitter:before {
+    content: "\e900";
+}
+.icon-facebook:before {
+    content: "\e901";
+}
+
 /*@font-face {
     font-family: 'Gotham Medium';
     src: url('../fonts/gotham-condensed-medium-webfont.woff') format('woff'),
