--- a/www/src/sass/_generic.scss
+++ b/www/src/sass/_generic.scss
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background: $bg-content-color;
+  background: $bg-content-color url('../img/background.jpg') center top;
   color: $secondary-color-dark;
 }
 
