--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -93,9 +93,10 @@
 }*/
 html,
 body {
+  font-family: 'Open Sans Regular', Helvetica, Arial, sans-serif;
   height: 100%;
   color: #f5f5f5;
-  background: #1c1c1c url('../img/background.jpg') center top;
+  background: #1c1c1c url('../img/background.jpg') no-repeat center top;
 }
 
 body {
@@ -111,6 +112,7 @@ section {
 }
 
 a {
+  font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
   -webkit-transition: all .2s ease-in;
   transition: all .2s ease-in;
   text-transform: uppercase;
@@ -131,6 +133,21 @@ p {
   margin: 1em 0 2em;
 }
 
+p.link-initial {
+  color: #999;
+}
+
+p.link-initial a {
+  text-decoration: underline;
+  text-transform: none;
+  color: #fff;
+}
+
+p.link-initial a:hover,
+p.link-initial a:focus {
+  color: #d1aa03;
+}
+
 /*********** Buttons ***********/
 .btn {
   font-family: 'Montserrat Bold', Helvetica, Arial, sans-serif;
@@ -138,6 +155,8 @@ p {
   line-height: 1;
   padding: 1em 3em;
   cursor: pointer;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
   text-transform: uppercase;
   border-width: 1px;
   border-style: solid;
@@ -151,7 +170,7 @@ p {
 .btn-default {
   color: #fff;
   border-color: #fff;
-  background-color: none;
+  background: none;
 }
 
 .btn-default:hover,
@@ -171,6 +190,17 @@ p {
   color: #2c2c2c;
 }
 
+.btn-dark {
+  color: #d1aa03;
+  border: none;
+  background-color: #2c2c2c;
+}
+
+.btn-dark:hover,
+.btn-dark:focus {
+  color: #fff;
+}
+
 .btn-gold {
   color: #fff;
   border-color: #d1aa03;
@@ -186,7 +216,7 @@ p {
   position: relative;
   color: #fff;
   border-color: #fff;
-  background-color: none;
+  background: none;
 }
 
 .btn-shine:after {
@@ -205,7 +235,8 @@ p {
   background: url('../img/bling.png') center center/cover;
 }
 
-.btn-shine:hover {
+.btn-shine:hover,
+.btn-shine:focus {
   -webkit-animation: Shine .75s linear;
           animation: Shine .75s linear;
   color: #fff;
@@ -216,7 +247,8 @@ p {
   background-size: 100% 1000%;
 }
 
-.btn-shine:hover:after {
+.btn-shine:hover:after,
+.btn-shine:focus:after {
   -webkit-transition: all ease .5s;
   transition: all ease .5s;
   -webkit-transform: scale(1) rotate(360deg);
@@ -252,52 +284,6 @@ p {
   }
 }
 
-/*.btn-shine {
-  background: linear-gradient(120deg, #d1aa03 0%, #a88900 18%, #d1ab03 30%, #ffeb94 46%, #d1ab03 55%, #a88900 69%, #d1aa03 100%);
-  -ms-filter: unquote("progid: DXImageTransform.Microsoft.gradient( startColorstr='#d1aa03', endColorstr='#d1aa03', GradientType=1)");
-  position: relative;
-  //box-shadow: 0 0 0 0 transparent;
-  box-shadow: 0px 0px 84px 0px rgba(0, 0, 0, 0.15);
-  transition: all 0.2s ease-in;
-  border: none;
-  &:hover {
-    color: $secondary-color-light;
-    transition: all 0.2s ease-out;
-  }
-  &:hover:before {
-    animation: shine 0.5s 0s linear;
-  }
-  &:active {
-    //box-shadow: 0 0 0 0 transparent;
-    transition: box-shadow 0.2s ease-in;
-  }
-  &:before {
-    content: '';
-    display: block;
-    width: 0px;
-    height: 86%;
-    position: absolute;
-    top: 7%;
-    left: 0%;
-    opacity: 0;
-    background: $secondary-color-light;
-    box-shadow: 0 0 15px 3px $secondary-color-light;
-    transform: skewX(-20deg);
-  }
-  @keyframes shine {
-    from {
-      opacity: 0;
-      left: 0%;
-    }
-    50% {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      left: 100%;
-    }
-  }
-}*/
 .text-center {
   text-align: center;
 }
@@ -324,6 +310,7 @@ p {
 }
 
 .navbar {
+  position: relative;
   background: none;
 }
 
@@ -371,6 +358,27 @@ p {
   background: #2c2c2c;
 }
 
+#login-pop-in {
+  position: absolute;
+  display: none;
+  visibility: hidden;
+}
+
+/*.shape {
+  display: none;
+  z-index: 10;
+  position: absolute;
+  top: 100px;
+  right: 41px;
+  width: 17px;
+  height: 17px;
+  transform: rotate(45deg);
+  background: linear-gradient(120deg, #ab8b00, #bc9901 100%);
+  border: 1px solid transparent;
+  border-image: linear-gradient(120deg, #a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+  border-image-slice: 1;
+  content: '';
+}*/
 @media (min-width: 768px) {
   .navbar {
     margin-bottom: 0;
@@ -435,20 +443,31 @@ p {
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
   }
-}
 
-#homepage-landing .right-column {
-  font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
+  #login-pop-in {
+    font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
+    z-index: 100;
+    top: 96px;
+    right: 30px;
+    visibility: visible;
+    padding: 20px 30px 20px 20px;
+    text-align: right;
+    border: 1px solid transparent;
+    -o-border-image: linear-gradient(#a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+       border-image: -webkit-linear-gradient(#a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+       border-image: linear-gradient(#a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+    border-image-slice: 1;
+    background: -webkit-linear-gradient(330deg, #d1aa03, #a88800 14%, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+    background: linear-gradient(120deg, #d1aa03, #a88800 14%, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+  }
+
+  #login-pop-in label {
+    display: none;
+  }
 }
 
 #homepage-landing .right-column p {
   line-height: 2;
-}
-
-@media (min-width: 992px) {
-  #homepage-landing .right-column {
-    padding: 0;
-  }
 }
 
 .btn-activities {
@@ -603,6 +622,158 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+#connexion input[type='submit'],
+#register input[type='submit'] {
+  margin: 1em;
+}
+
+#connexion .input,
+#register .input {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  overflow: hidden;
+  width: 100%;
+  vertical-align: top;
+}
+
+#connexion .input__field,
+#register .input__field {
+  font-family: 'Open Sans Regular', Helvetica, Arial, sans-serif;
+  position: relative;
+  display: block;
+  float: right;
+  width: 100%;
+  margin-top: 1em;
+  padding: 1.7em 1em;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  background: transparent;
+  -webkit-appearance: none;
+    /* for box shadows to show on iOS */
+}
+
+#connexion .input__field:focus,
+#register .input__field:focus {
+  outline: none;
+}
+
+#connexion .input__label,
+#register .input__label {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  float: right;
+  width: 100%;
+  height: calc(100% - 1.5em);
+  padding: 0 1em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-align: left;
+  pointer-events: none;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+}
+
+#connexion .input__label:before,
+#connexion .input__label:after,
+#register .input__label:before,
+#register .input__label:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 10px);
+  content: '';
+  border-bottom: 1px solid #999;
+}
+
+#connexion .input__label:after,
+#register .input__label:after {
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+  -webkit-transform: translate3d(-100%, 0, 0);
+          transform: translate3d(-100%, 0, 0);
+  border-bottom: 4px solid transparent;
+  -o-border-image: linear-gradient(#a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+     border-image: -webkit-linear-gradient(#a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+     border-image: linear-gradient(#a88800, #d1aa03 26%, #ffeb94 42%, #d1aa03 51%, #a88800 65%, #d1aa03);
+  border-image-slice: 1;
+}
+
+#connexion .input__label-content,
+#register .input__label-content {
+  position: absolute;
+  display: block;
+  width: 100%;
+  padding: 1.6em 0;
+}
+
+#connexion .input__field:focus + .input__label::after,
+#connexion .input--filled .input__label::after,
+#register .input__field:focus + .input__label::after,
+#register .input--filled .input__label::after {
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+
+#connexion .input__field:focus + .input__label .input__label-content,
+#connexion .input--filled .input__label-content,
+#register .input__field:focus + .input__label .input__label-content,
+#register .input--filled .input__label-content {
+  -webkit-animation: animInput .3s forwards;
+          animation: animInput .3s forwards;
+}
+
+@-webkit-keyframes animInput {
+  50% {
+    -webkit-transform: translate3d(1em, 0, 0);
+            transform: translate3d(1em, 0, 0);
+    opacity: 0;
+  }
+
+  51% {
+    -webkit-transform: translate3d(-1em, -40%, 0);
+            transform: translate3d(-1em, -40%, 0);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: translate3d(0, -40%, 0);
+            transform: translate3d(0, -40%, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes animInput {
+  50% {
+    -webkit-transform: translate3d(1em, 0, 0);
+            transform: translate3d(1em, 0, 0);
+    opacity: 0;
+  }
+
+  51% {
+    -webkit-transform: translate3d(-1em, -40%, 0);
+            transform: translate3d(-1em, -40%, 0);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: translate3d(0, -40%, 0);
+            transform: translate3d(0, -40%, 0);
+    opacity: 1;
+  }
 }
 
 footer {
