--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -1,8 +1,6 @@
 // Index 1 Concept
 #homepage-landing {
   .right-column {
-    
-    font-family: $montserrat-regular;
     p {
       line-height: 2;
     }
@@ -20,7 +18,7 @@
 @media (min-width: $screen-md-min) {
   #homepage-landing {
     .right-column {
-      padding: 0;
+      //padding: 0;
       //padding-top: 9em;
     }
   }
