--- a/www/src/sass/_generic.scss
+++ b/www/src/sass/_generic.scss
@@ -50,6 +50,13 @@ p {
   }
 }
 
+.title-next {
+  font-size: 1.857rem;
+  font-family: $montserrat-regular;
+  display: inline-block;
+  margin-top: -2rem;
+}
+
 /*********** Buttons ***********/
 
 .btn {
