--- a/www/src/sass/_fonts.scss
+++ b/www/src/sass/_fonts.scss
@@ -78,11 +78,20 @@
   }
 }
 
-.icon-twitter:before {
+.icon-king-of-fame:before {
     content: "\e900";
 }
-.icon-facebook:before {
+.icon-share-ico:before {
     content: "\e901";
+}
+.icon-heart-like:before {
+    content: "\e902";
+}
+.icon-twitter:before {
+    content: "\e903";
+}
+.icon-facebook:before {
+    content: "\e904";
 }
 
 /*@font-face {
