--- a/www/src/sass/_generic.scss
+++ b/www/src/sass/_generic.scss
@@ -54,7 +54,7 @@ p {
   font-size: 1.857rem;
   font-family: $montserrat-regular;
   display: inline-block;
-  margin-top: -2rem;
+  margin: -2em 0 2em;
 }
 
 /*********** Buttons ***********/
