--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -47,8 +47,8 @@
   position: relative;
   z-index: 1;
   display: inline-block;
-  width: 90px;
-  height: 90px;
+  width: 35px;
+  height: 35px;
   cursor: pointer;
   text-align: center;
   color: #fff;
@@ -67,26 +67,26 @@
 
 .icon:before {
   font-family: 'icomoon';
-  font-size: 5rem;
+  font-size: 35px;
   font-weight: normal;
   font-style: normal;
   font-variant: normal;
-  line-height: 90px;
+  line-height: 1;
   display: block;
   text-transform: none;
   speak: none;
   -webkit-font-smoothing: antialiased;
 }
 
-.icon-king-of-fame:before {
+.icon-instagram:before {
   content: '\e900';
 }
 
-.icon-share-ico:before {
+.icon-king-of-fame:before {
   content: '\e901';
 }
 
-.icon-heart-like:before {
+.icon-share-ico:before {
   content: '\e902';
 }
 
@@ -96,6 +96,10 @@
 
 .icon-facebook:before {
   content: '\e904';
+}
+
+.icon-heart-like:before {
+  content: '\e905';
 }
 
 /*@font-face {
@@ -635,44 +639,39 @@ p.link-initial a:focus {
   color: #777;
 }
 
+#block-player #aside-player .slide-candidates .candidate .icon-heart-like,
+#block-player #aside-player .slide-candidates .candidate .icon-share-ico {
+  font-size: 1.7rem;
+  cursor: pointer;
+  color: #f15c5c;
+}
+
+#block-player #aside-player .slide-candidates .candidate .icon-heart-like:hover,
+#block-player #aside-player .slide-candidates .candidate .icon-heart-like:focus,
+#block-player #aside-player .slide-candidates .candidate .icon-share-ico:hover,
+#block-player #aside-player .slide-candidates .candidate .icon-share-ico:focus {
+  font-size: 1.9rem;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+#block-player #aside-player .slide-candidates .candidate .icon-share-ico {
+  margin-left: 15px;
+  color: #2c2c2c;
+}
+
 #block-player #aside-player .slide-candidates .candidate .like-me-a-lot {
   font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
   font-size: 1.5rem;
   position: relative;
-  padding-left: 35px;
+  padding-left: 1em;
   -webkit-transition: all .3s;
   transition: all .3s;
   color: #777;
 }
 
-#block-player #aside-player .slide-candidates .candidate .like-me-a-lot:before {
-  position: absolute;
-  left: 0;
-  width: 28px;
-  height: 25px;
-  content: '';
-  background: url(../img/like.png) no-repeat center center/cover;
-}
-
-#block-player #aside-player .slide-candidates .candidate .like-me-a-lot:hover:before {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-
 #block-player #aside-player .slide-candidates .candidate .share-me-a-lot {
   font-size: 0;
-  position: relative;
-  position: absolute;
-  width: 18px;
-  height: 24px;
-  margin-left: 30px;
-  content: '';
-  background: url('../img/share.png');
-}
-
-#block-player #aside-player .slide-candidates .candidate .share-me-a-lot:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
 }
 
 #block-player #aside-player .slide-candidates .king-of-fame {
@@ -928,10 +927,10 @@ footer a:focus {
 }
 
 .contact-us {
-  text-align: right;
-    /*position: absolute;
+  position: absolute;
+  top: -9px;
   right: 15px;
-  top: -9px;*/
+  text-align: right;
 }
 
 .contact-us .icon {
@@ -939,6 +938,10 @@ footer a:focus {
   transition: color .3s;
   color: #d1aa03;
   box-shadow: 0 0 0 3px #f5f5f5;
+}
+
+.contact-us .icon:not(:first-of-type) {
+  margin-left: 10px;
 }
 
 .contact-us .icon:after {
