--- a/www/src/sass/_content.scss
+++ b/www/src/sass/_content.scss
@@ -47,6 +47,11 @@
           border-image-slice: 1;
           padding: 30px 15px;
           margin: 0;
+          button {
+            border: none;
+            width: 10rem;
+            height: 10rem;
+          }
         }
       }
     }
